Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamer-bot-cloud-%ENVIRONMENT%
